--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,13 @@ http {
         listen 80 default backlog=16384;
         listen [::]:80 default backlog=16384;
 
+        location /libs/mixpanel-js-wrapper.js {
+            proxy_set_header X-Real-IP $http_x_forwarded_for;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
+            proxy_pass https://cdn.mxpnl.com/libs/mixpanel-js-wrapper.js;
+        }
+
         location /lib.min.js {
             proxy_set_header X-Real-IP $http_x_forwarded_for;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
