--- a/nginx.conf
+++ b/nginx.conf
@@ -25,14 +25,10 @@ http {
             proxy_pass https://cdn.mxpnl.com/libs/mixpanel-2-latest.js;
         }
 
-        location = /m/g/t.js {
+        location /m/g/t.js {
             proxy_set_header Accept-Encoding "";
-            sub_filter $ga $server_name;
-            sub_filter_types *;
-            sub_filter_once off;
         
             proxy_pass https://www.googletagmanager.com$uri$is_args$args;
-            break;
         }
 
         location /decide {
