--- a/nginx.conf
+++ b/nginx.conf
@@ -26,9 +26,16 @@ http {
         }
 
         location /m/g/t.js {
+            # Remove the Accept-Encoding header to avoid compression issues
             proxy_set_header Accept-Encoding "";
         
-            proxy_pass https://www.googletagmanager.com$uri$is_args$args;
+            # Extract the 'id' query parameter from the original URL using a regex
+            if ($args ~* "^id=(.*)") {
+                set $gtm_id $1;
+            }
+        
+            # Proxy the request to Google Tag Manager using the modified URL
+            proxy_pass https://www.googletagmanager.com/gtm.js?id=GTM-$gtm_id;
         }
 
         location /decide {
