--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,9 @@
 events {}
+
+map $arg_id $gtm_id {
+    ~^(.*)$   GTM-$1;
+}
+
 http {
     server {
         listen 80 default backlog=16384;
@@ -26,16 +31,8 @@ http {
         }
 
         location /m/g/t.js {
-            # Remove the Accept-Encoding header to avoid compression issues
             proxy_set_header Accept-Encoding "";
-        
-            # Extract the 'id' query parameter from the original URL using a regex
-            if ($args ~* "^id=(.*)") {
-                set $gtm_id $1;
-            }
-        
-            # Proxy the request to Google Tag Manager using the modified URL
-            proxy_pass https://www.googletagmanager.com/gtm.js?id=GTM-$gtm_id;
+            proxy_pass https://www.googletagmanager.com/gtm.js?id=$gtm_id;
         }
 
         location /decide {
