--- a/nginx.conf
+++ b/nginx.conf
@@ -3,9 +3,6 @@ events {}
 
 
 http {
-    map $arg_id $gtm_id {
-        ~^(.*)$   GTM-$1;
-    }
     server {
         listen 80 default backlog=16384;
         listen [::]:80 default backlog=16384;
@@ -33,7 +30,10 @@ http {
 
         location /m/g/t.js {
             proxy_set_header Accept-Encoding "";
-            proxy_pass https://www.googletagmanager.com/gtm.js?id=$gtm_id;
+            add_header X-uri "$uri";
+            add_header X-isargs "$is_args";
+            add_header X-args "$args";
+            proxy_pass https://www.googletagmanager.com/gtm.js;
         }
 
         location /decide {
