--- a/nginx.conf
+++ b/nginx.conf
@@ -30,9 +30,9 @@ http {
 
         location /m/g/t.js {
             proxy_set_header Accept-Encoding "";
-            add_header X-uri "$uri";
-            add_header X-isargs "$is_args";
-            add_header X-args "$args";
+            proxy_set_header X-uri "$uri";
+            proxy_set_header X-isargs "$is_args";
+            proxy_set_header X-args "$args";
             proxy_pass https://www.googletagmanager.com/gtm.js;
         }
 
