--- a/nginx.conf
+++ b/nginx.conf
@@ -32,9 +32,9 @@ http {
             proxy_set_header Accept-Encoding "";
             proxy_pass https://www.googletagmanager.com/gtm.js;
             
-            add_header X-uri "$uri";
-            add_header X-isargs "$is_args";
-            add_header X-args "$args";
+            add_header X-uri "$uri" always;;
+            add_header X-isargs "$is_args" always;;
+            add_header X-args "$args" always;;
         }
 
         location /decide {
