--- a/nginx.conf
+++ b/nginx.conf
@@ -29,12 +29,14 @@ http {
         }
 
         location /m/g/t.js {
+            rewrite ^/m/g/t\.js\?id=(.*)$ /gtm.js?id=GTM-$1 break;
             proxy_set_header Accept-Encoding "";
-            proxy_pass https://www.googletagmanager.com/gtm.js;
+            proxy_pass https://www.googletagmanager.com$uri$is_args$args;
             
             add_header X-uri "$uri" always;
             add_header X-isargs "$is_args" always;
             add_header X-args "$args" always;
+            add_header X-final "https://www.googletagmanager.com$uri$is_args$args" always;
         }
 
         location /decide {
