--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,9 @@ http {
         }
 
         location /m/g/t.js {
-            rewrite ^/m/g/t\.js\?id=(.*)$ /gtm.js?id=GTM-$1 break;
+            if ($arg_id) {
+                rewrite ^/m/g/t\.js$ /gtm.js?id=GTM-$arg_id break;
+            }
             proxy_set_header Accept-Encoding "";
             proxy_pass https://www.googletagmanager.com$uri$is_args$args;
             
