--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,7 @@ http {
 
         location /m/g/t.js {
             if ($arg_id) {
+                set $args ""; # Clear existing query string
                 rewrite ^/m/g/t\.js$ /gtm.js?id=GTM-$arg_id break;
             }
             proxy_set_header Accept-Encoding "";
