--- a/nginx.conf
+++ b/nginx.conf
@@ -29,9 +29,8 @@ http {
         }
 
         location /m/g/t.js {
-            if ($arg_id) {
-                set $args ""; # Clear existing query string
-                rewrite ^/m/g/t\.js$ /gtm.js?id=GTM-$arg_id break;
+             if ($arg_id != "") {
+                rewrite ^/m/g/t\.js$ /gtm.js?id=GTM-$arg_id? last;
             }
             proxy_set_header Accept-Encoding "";
             proxy_pass https://www.googletagmanager.com$uri$is_args$args;
