--- a/nginx.conf
+++ b/nginx.conf
@@ -29,8 +29,9 @@ http {
         }
 
         location /m/g/t.js {
-             if ($arg_id != "") {
-                rewrite ^/m/g/t\.js$ /gtm.js?id=GTM-$arg_id? last;
+             if ($args ~* "id=") {
+                set $id $arg_id;
+                rewrite ^/m/g/t\.js /gtm.js?id=GTM-$id? permanent;
             }
             proxy_set_header Accept-Encoding "";
             proxy_pass https://www.googletagmanager.com$uri$is_args$args;
