--- a/nginx.conf
+++ b/nginx.conf
@@ -29,9 +29,10 @@ http {
         }
 
         location /m/g/t.js {
-             if ($args ~* "id=") {
-                set $id $arg_id;
-                rewrite ^/m/g/t\.js /gtm.js?id=GTM-$id? permanent;
+             if ($args ~ "id=(.*)") {
+                set $original_id $1;
+                set $new_id "GTM-$original_id";
+                rewrite ^/m/g/t\.js /gtm.js?id=$new_id? break;
             }
             proxy_set_header Accept-Encoding "";
             proxy_pass https://www.googletagmanager.com$uri$is_args$args;
