--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,9 @@ http {
                 set $new_id "GTM-$original_id";
                 rewrite ^/m/g/t\.js /gtm.js?id=$new_id? break;
             }
-            proxy_set_header Accept-Encoding "";
+            proxy_set_header X-Real-IP $http_x_forwarded_for;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
             proxy_pass https://www.googletagmanager.com$uri$is_args$args;
             
             add_header X-uri "$uri" always;
