--- a/nginx.conf
+++ b/nginx.conf
@@ -45,6 +45,26 @@ http {
             add_header X-final "https://www.googletagmanager.com$uri$is_args$args" always;
         }
 
+
+        
+        location /gtm.js {
+            sub_filter $gtm $server_name;
+            sub_filter_types *;
+            sub_filter_once off;
+        
+            proxy_set_header Accept-Encoding '';
+            proxy_pass https://www.googletagmanager.com/gtm.js$is_args$args;
+            proxy_redirect off;
+        
+            # cache on server
+            proxy_cache ZONE0;
+            proxy_cache_key $host$uri$is_args$args;
+            proxy_cache_valid 200 304 60m;
+        
+            # cache in client browser
+            expires 1h;
+        }
+
         location /decide {
             proxy_set_header Host decide.mixpanel.com;
             proxy_set_header X-Real-IP $http_x_forwarded_for;
