--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,9 @@ events {}
 
 http {
     server {
+
+        set $gtm 'www.googletagmanager.com';
+        
         listen 80 default backlog=16384;
         listen [::]:80 default backlog=16384;
 
@@ -53,16 +56,8 @@ http {
             sub_filter_once off;
         
             proxy_set_header Accept-Encoding '';
-            proxy_pass https://www.googletagmanager.com/gtm.js$is_args$args;
+            proxy_pass https://$gtm/gtm.js$is_args$args;
             proxy_redirect off;
-        
-            # cache on server
-            proxy_cache ZONE0;
-            proxy_cache_key $host$uri$is_args$args;
-            proxy_cache_valid 200 304 60m;
-        
-            # cache in client browser
-            expires 1h;
         }
 
         location /decide {
