--- a/nginx.conf
+++ b/nginx.conf
@@ -58,6 +58,8 @@ http {
             proxy_set_header Accept-Encoding '';
             proxy_pass https://$gtm/gtm.js$is_args$args;
             proxy_redirect off;
+
+            add_header X-final "https://$gtm/gtm.js$is_args$args" always;
         }
 
         location /decide {
