--- a/nginx.conf
+++ b/nginx.conf
@@ -4,8 +4,6 @@ events {}
 
 http {
     server {
-
-        set $gtm 'www.googletagmanager.com';
         
         listen 80 default backlog=16384;
         listen [::]:80 default backlog=16384;
@@ -51,15 +49,12 @@ http {
 
         
         location /gtm.js {
-            sub_filter $gtm $server_name;
-            sub_filter_types *;
-            sub_filter_once off;
         
             proxy_set_header Accept-Encoding '';
-            proxy_pass https://$gtm/gtm.js$is_args$args;
+            proxy_pass https://www.googletagmanager.com/gtm.js$is_args$args;
             proxy_redirect off;
 
-            add_header X-final "https://$gtm/gtm.js$is_args$args" always;
+            add_header X-final "https://www.googletagmanager.com/gtm.js$is_args$args" always;
         }
 
         location /decide {
