--- a/nginx.conf
+++ b/nginx.conf
@@ -51,7 +51,7 @@ http {
         location /gtm.js {
         
             proxy_set_header Accept-Encoding '';
-            proxy_pass https://www.googletagmanager.com/gtm.js;
+            proxy_pass https://www.googletagmanager.com/gtm.js?id=GTM-WNG7X6R;
 
             add_header X-final "https://www.googletagmanager.com/gtm.js" always;
         }
