--- a/nginx.conf
+++ b/nginx.conf
@@ -51,9 +51,9 @@ http {
         location /gtm.js {
         
             proxy_set_header Accept-Encoding '';
-            proxy_pass https://www.googletagmanager.com/gtm.js?$args;
+            proxy_pass https://www.googletagmanager.com/gtm.js;
 
-            add_header X-final "https://www.googletagmanager.com/gtm.js" always;
+            add_header X-final "$args" always;
         }
 
         location /decide {
