--- a/nginx.conf
+++ b/nginx.conf
@@ -48,12 +48,10 @@ http {
 
 
         
-        location /gtm.js {
+        location /ggtt {
         
             proxy_set_header Accept-Encoding '';
             proxy_pass https://www.googletagmanager.com/gtm.js;
-
-            add_header X-final "$args" always;
         }
 
         location /decide {
