--- a/nginx.conf
+++ b/nginx.conf
@@ -49,10 +49,13 @@ http {
 
         
         location /ggtt {
-        
             proxy_set_header Accept-Encoding '';
             proxy_pass https://www.googletagmanager.com/gtm.js;
         }
+
+        location /hhtt {
+            proxy_set_header Accept-Encoding '';
+            proxy_pass https://www.googletagmanager.com/ns.html;
 
         location /decide {
             proxy_set_header Host decide.mixpanel.com;
