--- a/nginx.conf
+++ b/nginx.conf
@@ -58,6 +58,12 @@ http {
             proxy_pass https://www.googletagmanager.com/ns.html;
         }
 
+        location /gd {
+            proxy_set_header Accept-Encoding '';
+            proxy_pass https://www.googletagmanager.com/;
+        }
+            
+
         location /decide {
             proxy_set_header Host decide.mixpanel.com;
             proxy_set_header X-Real-IP $http_x_forwarded_for;
